fixed issue where buttons were off screen

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button:active, .buttonActive{
 /* Timer Selecter */
 #setTime{
     position: fixed;
-    left: 35px;
+    left: 2%;
     .buttonBlock{
         width: 100px;
         display: inline-block;
@@ -66,7 +66,7 @@ button:active, .buttonActive{
 #disarmKeyPad{
     top: 50px;
     position: fixed;
-    left: 500px;
+    left: 50%;
     button{
         width: 80px;
         height: 45px;
@@ -114,8 +114,8 @@ button:active, .buttonActive{
 #submitButton{
     position: fixed;
     width: 346px;
-    top: 315px;
-    left: 40px;
+    top: 80%;
+    left: 2%;
     border-width: 15px;
     margin: 0 auto;
     padding: 10px 100px;
